[tool.poetry]
name = "dnd"
version = "0.3.0"
description = "A tool to manage math to do with Dungeons and Dragons."
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-2.0+"

[tool.poetry.dependencies]
python = "^3.6"
jsonpointer = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
